Correct alignment of currency symbol

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,6 +117,7 @@ div.bg-dark>ul.chevron>li.leaf-entry>div::before {
 .currency {
     min-width: 1.2rem;
     display: inline-block;
+    text-align: start;
 }
 
 .cursor-pointer {
